# open-exposure-gateway

./: .env.sample  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sample.setup.py.bkp  setup.py  tox.ini
.github/workflows/: edge-cloud-management-api.yml
edge_cloud_management_api/: __main__.py  app.py
edge_cloud_management_api/configs/: env_config.py
edge_cloud_management_api/controllers/: app_controllers.py  edge_cloud_controller.py  federation_manager_controller.py
edge_cloud_management_api/managers/: db_manager.py  log_manager.py
edge_cloud_management_api/models/: application_models.py  edge_cloud_models.py  error_models.py  federation_manager_models.py
edge_cloud_management_api/services/: federation_services.py  pi_edge_services.py
edge_cloud_management_api/specification/: openapi.yaml
scripts/: start-mongo.sh
src/capabilities_exposure_api/: __main__.py
src/capabilities_exposure_api/controllers/: application_controller.py  edge_cloud_controller.py
src/capabilities_exposure_api/models/: application_models.py
src/capabilities_exposure_api/schema_mappers/: edge_cloud_mapper.py
src/capabilities_exposure_api/services/: pi_edge_services.py
swagger_server/: __main__.py
swagger_server/configs/: logger_config.py
swagger_server/controllers/: application_controller.py  edge_cloud_controller.py
swagger_server/filters/: service_functions.py
swagger_server/models/: __init__.py  access_endpoint.py  any_of_access_endpoint.py  app_id.py  app_instance_id.py  app_instance_info.py  app_instance_info_component_endpoint_info.py  app_zones.py  edge_cloud_zone.py  error_info.py  inline_response200.py  inline_response2001.py  inline_response202.py  submitted_app.py
swagger_server/schema_mappers/: application_instantiation_mapper.py
swagger_server/services/: pi_edge_services.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_application_controller.py  test_edge_cloud_controller.py
tests/capabilities_exposure_api/: __init__.py  test_application_controller.py  test_edge_cloud_controller.py
tests/component/controllers/: test_app_controllers.py
tests/controllers/: test_app_controllers.py
tests/fixtures/: edge-cloud-zones.json  mongo-apps-test-collection-dump.json  submit_app.json
tests/unit/controllers/: test_app_controllers.py  test_edge_cloud_controller.py
(+1 files in other folders)
